--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-burger-menu": "^2.6.11",
+    "react-calendar": "^2.19.1",
+    "react-datepicker2": "^3.0.3",
     "react-dom": "^16.9.0",
     "react-grid-system": "^5.0.2",
+    "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "semantic-ui-react": "^0.88.0",
