--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apexcharts": "^3.8.5",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
     "react": "^16.9.0",
+    "react-apexcharts": "^1.3.3",
     "react-burger-menu": "^2.6.11",
     "react-calendar": "^2.19.1",
+    "react-countup": "^4.2.2",
     "react-datepicker2": "^3.0.3",
     "react-dom": "^16.9.0",
     "react-grid-system": "^5.0.2",
