--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "anychart-react": "^1.4.1",
     "apexcharts": "^3.8.5",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
